<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameModesActivity" >

    <ImageView
        android:id="@+id/mapImage"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/gameModeMapImage"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/summoners_rift" />

    <TextView
        android:id="@+id/mapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Map"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapImage" />

    <Spinner
        android:id="@+id/mapSpinner"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/mapTextView"
        app:layout_constraintStart_toEndOf="@+id/mapTextView"
        app:layout_constraintTop_toTopOf="@+id/mapTextView" />

    <TextView
        android:id="@+id/mapDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/defaultTextView"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapSpinner" />

    <TextView
        android:id="@+id/dividerGameModes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:textSize="1sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapDescription" />

    <TextView
        android:id="@+id/modesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/arizonia"
        android:text="@string/Game_Modes"
        android:textSize="32sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerGameModes" />

    <TextView
        android:id="@+id/mapGameModes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/defaultTextView"
        android:textColor="#FFEB3B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modesTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>